--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <h1>Scrolling Nav</h1>
-                    <p>/Hello World This is my Intro.</p>
+                    <p></p>
                 </div>
             </div>
         </div>
@@ -76,7 +76,14 @@
                 </div>
             </div>
         </div>
+     <footer>
+        <nav class="navbar navbar-inverse navbar-fixed-bottom">
+            <div class="container-fluid">
+            </div>
+        </nav>
+     </footer>        
     </section>
+   
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
     <script src="js/NavScroll.js"></script>
