--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <header>Scrolling Nav</header>
+                    <header><h1>Scrolling Nav</h1></header>
                     <p></p>
                 </div>
             </div>
