--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <span class="icon-bar"></span>
             </button>
             <a class="navbar-brand pull-left" href="#" title="Aaron Covington">
-                <img class="img-responsive" id="logo" src="img/header.png" alt="Aaron Covington">
+                <img class="img-responsive col-xs-2" id="logo" src="img/header.png" alt="Aaron Covington">
             </a>
         </div>
         <div id="myNavbar" class="navbar-collapse collapse">
@@ -84,11 +84,11 @@
      </footer>        
     </section>
    
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-    <script src="js/NavScroll.js"></script>
-
     <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <script src="js/NavScroll.js"></script>
+    <script src="js/PicSwap.js"></script>
 </body>
 </html>
