--- a/index.html
+++ b/index.html
@@ -78,7 +78,12 @@
         </div>
      <footer>
         <nav class="navbar navbar-inverse navbar-fixed-bottom">
-            <div class="container-fluid">
+            <div class="container-fluid pull-right">
+                <a href=""><div class="social-slide facebook"></div></a>
+                <a href=""><div class="social-slide twitter"></div></a>
+                <a href=""><div class="social-slide linkedin"></div></a>
+                <a href=""><div class="social-slide github"></div></a>
+                <a href=""><div class="social-slide gmail"></div></a>
             </div>
         </nav>
      </footer>        
