Added Social Media Icons

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <span class="icon-bar"></span>
             </button>
             <a class="navbar-brand pull-left" href="#" title="Aaron Covington">
-                <img class="img-responsive col-xs-2" id="logo" src="img/header.png" alt="Aaron Covington">
+                <img class="img-responsive" id="logo" src="img/header.png" alt="Aaron Covington">
             </a>
         </div>
         <div id="myNavbar" class="navbar-collapse collapse">
@@ -77,13 +77,13 @@
             </div>
         </div>
      <footer>
-        <nav class="navbar navbar-inverse navbar-fixed-bottom">
-            <div class="container-fluid pull-right">
-                <a href=""><div class="social-slide facebook"></div></a>
-                <a href=""><div class="social-slide twitter"></div></a>
-                <a href=""><div class="social-slide linkedin"></div></a>
-                <a href=""><div class="social-slide github"></div></a>
-                <a href=""><div class="social-slide gmail"></div></a>
+        <nav class="navbar navbar-fixed-bottom">
+            <div class="container-fluid pull-right" id="social-pics">
+                <a href=""><img class="facebook" src="img/social/Facebook.png"></a>
+                <a href=""><img class="twitter" src="img/social/Twitter.png"></a>
+                <a href=""><img class="linkedin" src="img/social/Linkedin.png"></a>
+                <a href=""><img class="github" src="img/social/Github.png"></a>
+                <a href=""><img class="gmail" src="img/social/Gmail.png"></a>
             </div>
         </nav>
      </footer>        
