--- a/index.html
+++ b/index.html
@@ -79,11 +79,11 @@
      <footer>
         <nav class="navbar navbar-fixed-bottom">
             <div class="container-fluid pull-right" id="social-pics">
-                <a href=""><img class="facebook" src="img/social/Facebook.png"></a>
-                <a href=""><img class="twitter" src="img/social/Twitter.png"></a>
-                <a href=""><img class="linkedin" src="img/social/Linkedin.png"></a>
-                <a href=""><img class="github" src="img/social/Github.png"></a>
-                <a href=""><img class="gmail" src="img/social/Gmail.png"></a>
+                <a href=""><img class="facebook" src="img/social/facebook.png"></a>
+                <a href=""><img class="twitter" src="img/social/twitter.png"></a>
+                <a href=""><img class="linkedin" src="img/social/linkedin.png"></a>
+                <a href=""><img class="github" src="img/social/github.png"></a>
+                <a href=""><img class="gmail" src="img/social/gmail.png"></a>
             </div>
         </nav>
      </footer>        
