--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
         </div>
         <div id="myNavbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav pull-right">
-                <li><a href="#intro">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#portfolio">Portfolio</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li class="sliding-middle-out"><a href="#intro">Home</a></li>
+                <li class="sliding-middle-out"><a href="#about">About</a></li>
+                <li class="sliding-middle-out"><a href="#portfolio">Portfolio</a></li>
+                <li class="sliding-middle-out"><a href="#contact">Contact</a></li>
             </ul>
         </div>
     </div>
