--- a/index.html
+++ b/index.html
@@ -39,7 +39,6 @@
             <div class="row">
                 <div class="col-lg-12">
                     <header><h1>Scrolling Nav</h1></header>
-                    <p></p>
                 </div>
             </div>
         </div>
@@ -57,11 +56,14 @@
     </section>
 
     <!-- Services Section -->
-    <section id="portfolio" class="services-section">
+    <section id="portfolio" class="portfolio-section">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <h1>Services Section</h1>
+                    <h1>Portfolio Section</h1>
+                    <div class="project col-lg-4"></div>
+                    <div class="project col-lg-4"></div>
+                    <div class="project col-lg-4"></div>
                 </div>
             </div>
         </div>
