--- a/index.html
+++ b/index.html
@@ -61,9 +61,15 @@
             <div class="row">
                 <div class="col-lg-12">
                     <h1>Portfolio Section</h1>
-                    <div class="project col-lg-4"></div>
-                    <div class="project col-lg-4"></div>
-                    <div class="project col-lg-4"></div>
+                    <div class="project col-lg-4">
+                        <img src="img/place1.png">
+                    </div>
+                    <div class="project col-lg-4">
+                        <img src="img/place2.png">
+                    </div>
+                    <div class="project col-lg-4">
+                        <img src="img/place3.png">
+                    </div>
                 </div>
             </div>
         </div>
