--- a/index.html
+++ b/index.html
@@ -59,16 +59,58 @@
     <section id="portfolio" class="portfolio-section">
         <div class="container">
             <div class="row">
-                <div class="col-lg-12">
-                    <h1>Portfolio Section</h1>
-                    <div class="project col-lg-4">
+                <div class="col-sm-6 col-md-4">
+                    <div class="thumbnail">
                         <img src="img/place1.png">
+                        <div class="caption">
+                            <h3 class="text-center">Placeholder Text</h3>
+                            <p class="text-center">HTML5 &bull; CSS3 &bull; Bootstrap</p>
+                        </div>
                     </div>
-                    <div class="project col-lg-4">
+                </div>
+                <div class="col-sm-6 col-md-4">
+                    <div class="thumbnail">
                         <img src="img/place2.png">
+                        <div class="caption">
+                            <h3 class="text-center">Placeholder Text</h3>
+                            <p class="text-center">HTML5 &bull; CSS3 &bull; Bootstrap</p>
+                        </div>
                     </div>
-                    <div class="project col-lg-4">
+                </div>
+                <div class="col-sm-6 col-md-4">
+                    <div class="thumbnail">
                         <img src="img/place3.png">
+                        <div class="caption">
+                            <h3 class="text-center">Placeholder Text</h3>
+                            <p class="text-center">HTML5 &bull; CSS3 &bull; Bootstrap</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-4">
+                    <div class="thumbnail">
+                        <img src="img/place1.png">
+                        <div class="caption">
+                            <h3 class="text-center">Placeholder Text</h3>
+                            <p class="text-center">HTML5 &bull; CSS3 &bull; Bootstrap</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-4">
+                    <div class="thumbnail">
+                        <img src="img/place1.png">
+                        <div class="caption">
+                            <h3 class="text-center">Placeholder Text</h3>
+                            <p class="text-center">HTML5 &bull; CSS3 &bull; Bootstrap</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-4">
+                    <div class="thumbnail">
+                        <img src="img/place1.png">
+                        <div class="caption">
+                            <h3 class="text-center">Placeholder Text</h3>
+                            <p class="text-center">HTML5 &bull; CSS3 &bull; Bootstrap</p>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -106,3 +148,4 @@
     <script src="js/NavScroll.js"></script>
 </body>
 </html>
+
