--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
+    <link href='https://fonts.googleapis.com/css?family=Righteous' rel='stylesheet' type='text/css'>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Aaron's Portfolio</title>
@@ -18,8 +19,8 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand pull-left" href="#" title="Aaron Covington">
-                <img class="img-responsive" id="logo" src="img/header.png" alt="Aaron Covington">
+            <a class="navbar-brand pull-left" id="aaron" href="#" title="Aaron Covington">
+                Aaron Covington
             </a>
         </div>
         <div id="myNavbar" class="navbar-collapse collapse">
@@ -37,8 +38,12 @@
     <section id="intro" class="intro">
         <div class="container">
             <div class="row">
-                <div class="col-lg-12">
-                    <header><h1>Scrolling Nav</h1></header>
+                <div class="col-lg-6 col-lg-offset-3" id="intro-panel">
+                    <img class="img-responsive center-block" id="logo" src="img/header.png">
+                    <header>
+                        <h2>Aaron Covington</h2>
+                        <p><h4>Fullstack Web Developer</h4></p>
+                    </header>
                 </div>
             </div>
         </div>
