--- a/index.html
+++ b/index.html
@@ -73,55 +73,73 @@
     <section id="portfolio" class="portfolio-section">
         <div class="container-fluid">
             <div class="row">
-                <div class="col-sm-6 col-md-4 col-xs-12">
+                <div class="col-md-4 col-xs-12">
                     <div class="thumbnail portfolio-project">
-                        <img class="img-responsive" src="img/place1.png">
-                        <div class="caption">
+                        <a href="" class="img-hover">
+                            <img class="img-responsive img-fade" src="img/place1.png">
+                            <span class="text-content"><span>I built this website to showcase my web development skills and to display my work.</span></span>
+                        </a>
+                        <div class="caption proj-desc">
+                            <h3 class="text-center">Portfolio Website</h3>
+                            <p class="text-center">HTML5 &bull; CSS3 &bull; Bootstrap &bull; JQuery</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 col-xs-12">
+                    <div class="thumbnail portfolio-project">
+                        <a href="" class="img-hover">
+                            <img class="img-responsive img-fade" src="img/place2.png">
+                            <span class="text-content"><span>Place Name</span></span>
+                        </a>
+                        <div class="caption proj-desc">
+                            <h3 class="text-center">Sliding-Tile Game Solver</h3>
+                            <p class="text-center">Javascript</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 col-xs-12">
+                    <div class="thumbnail portfolio-project">
+                        <a href="" class="img-hover">
+                            <img class="img-responsive img-fade" src="img/place3.png">
+                            <span class="text-content"><span>Place Name</span></span>
+                        </a>
+                        <div class="caption proj-desc">
                             <h3 class="text-center">Placeholder Text</h3>
                             <p class="text-center">HTML5 &bull; CSS3 &bull; Bootstrap</p>
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-6 col-md-4 col-xs-12">
+                <div class="col-md-4 col-xs-12">
                     <div class="thumbnail portfolio-project">
-                        <img class="img-responsive" src="img/place2.png">
-                        <div class="caption">
+                        <a href="" class="img-hover">
+                            <img class="img-responsive img-fade" src="img/place1.png">
+                            <span class="text-content"><span>Place Name</span></span>
+                        </a>
+                        <div class="caption proj-desc">
                             <h3 class="text-center">Placeholder Text</h3>
                             <p class="text-center">HTML5 &bull; CSS3 &bull; Bootstrap</p>
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-6 col-md-4 col-xs-12">
+                <div class="col-md-4 col-xs-12">
                     <div class="thumbnail portfolio-project">
-                        <img class="img-responsive" src="img/place3.png">
-                        <div class="caption">
+                        <a href="" class="img-hover">
+                            <img class="img-responsive img-fade" src="img/place1.png">
+                            <span class="text-content"><span>Place Name</span></span>
+                        </a>
+                        <div class="caption proj-desc">
                             <h3 class="text-center">Placeholder Text</h3>
                             <p class="text-center">HTML5 &bull; CSS3 &bull; Bootstrap</p>
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-6 col-md-4 col-xs-12">
+                <div class="col-md-4 col-xs-12">
                     <div class="thumbnail portfolio-project">
-                        <img class="img-responsive" src="img/place1.png">
-                        <div class="caption">
-                            <h3 class="text-center">Placeholder Text</h3>
-                            <p class="text-center">HTML5 &bull; CSS3 &bull; Bootstrap</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-sm-6 col-md-4 col-xs-12">
-                    <div class="thumbnail portfolio-project">
-                        <img class="img-responsive" src="img/place1.png">
-                        <div class="caption">
-                            <h3 class="text-center">Placeholder Text</h3>
-                            <p class="text-center">HTML5 &bull; CSS3 &bull; Bootstrap</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-sm-6 col-md-4 col-xs-12">
-                    <div class="thumbnail portfolio-project">
-                        <img class="img-responsive" src="img/place1.png">
-                        <div class="caption">
+                        <a href="" class="img-hover">
+                            <img class="img-responsive img-fade" src="img/place1.png">
+                            <span class="text-content"><span>Place Name</span></span>
+                        </a>
+                        <div class="caption proj-desc">
                             <h3 class="text-center">Placeholder Text</h3>
                             <p class="text-center">HTML5 &bull; CSS3 &bull; Bootstrap</p>
                         </div>
@@ -168,11 +186,11 @@
      <footer>
         <nav class="navbar navbar-fixed-bottom">
             <div class="container-fluid pull-right" id="social-pics">
-                <a href=""><img class="facebook" src="img/Social/Facebook.png"></a>
-                <a href=""><img class="twitter" src="img/Social/Twitter.png"></a>
-                <a href=""><img class="linkedin" src="img/Social/Linkedin.png"></a>
-                <a href=""><img class="github" src="img/Social/Github.png"></a>
-                <a href=""><img class="gmail" src="img/Social/Gmail.png"></a>
+                <a href="https://www.facebook.com/aaron.covington.330" target="_blank"><img class="facebook" src="img/Social/Facebook.png"></a>
+                <a href="https://twitter.com/AaronCovington?lang=en" target="_blank"><img class="twitter" src="img/Social/Twitter.png"></a>
+                <a href="https://www.linkedin.com/in/aaron-covington-842b3b36" target="_blank"><img class="linkedin" src="img/Social/Linkedin.png"></a>
+                <a href="https://github.com/TheAaronCovington" target="_blank"><img class="github" src="img/Social/Github.png"></a>
+                <a href="mailto:theaaroncovington@gmail.com" target="_blank"><img class="gmail" src="img/Social/Gmail.png"></a>
             </div>
         </nav>
      </footer>        
