--- a/index.html
+++ b/index.html
@@ -75,10 +75,13 @@
             <div class="row">
                 <div class="col-md-4 col-xs-12">
                     <div class="thumbnail portfolio-project">
-                        <a href="" class="img-hover">
-                            <img class="img-responsive img-fade" src="img/place1.png">
-                            <span class="text-content"><span>I built this website to showcase my web development skills and to display my work.</span></span>
+                        <a href="" class="img-hover"> 
+                            <div id="img1">
+                                <img class="img-responsive" src="img/place1.png">
+                            </div>
+                            <span class="text-content" id="span1"><span>I built this website to showcase my web development skills and to display my work.</span></span>
                         </a>
+                        
                         <div class="caption proj-desc">
                             <h3 class="text-center">Portfolio Website</h3>
                             <p class="text-center">HTML5 &bull; CSS3 &bull; Bootstrap &bull; JQuery</p>
@@ -88,8 +91,10 @@
                 <div class="col-md-4 col-xs-12">
                     <div class="thumbnail portfolio-project">
                         <a href="" class="img-hover">
-                            <img class="img-responsive img-fade" src="img/place2.png">
-                            <span class="text-content"><span>Place Name</span></span>
+                            <div id="img2">
+                                <img class="img-responsive" src="img/place2.png">
+                            </div>
+                            <span class="text-content" id="span2"><span>Place Name</span></span>
                         </a>
                         <div class="caption proj-desc">
                             <h3 class="text-center">Sliding-Tile Game Solver</h3>
@@ -100,8 +105,26 @@
                 <div class="col-md-4 col-xs-12">
                     <div class="thumbnail portfolio-project">
                         <a href="" class="img-hover">
-                            <img class="img-responsive img-fade" src="img/place3.png">
-                            <span class="text-content"><span>Place Name</span></span>
+                            <div id="img3">
+                                <img class="img-responsive" src="img/place3.png">
+                            </div>
+                            <span class="text-content" id="span3"><span>Place Name</span></span>
+                        </a>
+                        <div class="caption proj-desc">
+                            <h3 class="text-center">Placeholder Text</h3>
+                            <p class="text-center">HTML5 &bull; CSS3 &bull; Bootstrap</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-4 col-xs-12">
+                    <div class="thumbnail portfolio-project">
+                        <a href="" class="img-hover">
+                            <div id="img4">
+                                <img class="img-responsive" src="img/place1.png">
+                            </div>
+                            <span class="text-content" id="span4"><span>Place Name</span></span>
                         </a>
                         <div class="caption proj-desc">
                             <h3 class="text-center">Placeholder Text</h3>
@@ -112,8 +135,10 @@
                 <div class="col-md-4 col-xs-12">
                     <div class="thumbnail portfolio-project">
                         <a href="" class="img-hover">
-                            <img class="img-responsive img-fade" src="img/place1.png">
-                            <span class="text-content"><span>Place Name</span></span>
+                            <div id="img5">
+                                <img class="img-responsive" src="img/place1.png">
+                            </div>
+                            <span class="text-content" id="span5"><span>Place Name</span></span>
                         </a>
                         <div class="caption proj-desc">
                             <h3 class="text-center">Placeholder Text</h3>
@@ -124,20 +149,10 @@
                 <div class="col-md-4 col-xs-12">
                     <div class="thumbnail portfolio-project">
                         <a href="" class="img-hover">
-                            <img class="img-responsive img-fade" src="img/place1.png">
-                            <span class="text-content"><span>Place Name</span></span>
-                        </a>
-                        <div class="caption proj-desc">
-                            <h3 class="text-center">Placeholder Text</h3>
-                            <p class="text-center">HTML5 &bull; CSS3 &bull; Bootstrap</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4 col-xs-12">
-                    <div class="thumbnail portfolio-project">
-                        <a href="" class="img-hover">
-                            <img class="img-responsive img-fade" src="img/place1.png">
-                            <span class="text-content"><span>Place Name</span></span>
+                            <div id="img6">
+                                <img class="img-responsive" src="img/place1.png">
+                            </div>
+                            <span class="text-content" id="span6"><span>Place Name</span></span>
                         </a>
                         <div class="caption proj-desc">
                             <h3 class="text-center">Placeholder Text</h3>
@@ -203,6 +218,6 @@
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <script src="js/PicSwap.js"></script>
     <script src="js/NavScroll.js"></script>
+    <script src="js/hover.js"></script>
 </body>
 </html>
-
