--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                     
                     <div class="col-md-6 col-md-offset-3">
                         <input type="submit" class="btn btn-success btn-send btn-contact" value="Send message">
-                        <input type="hidden" name="_next" value="" />
+                        <input type="hidden" name="_next" value="http://theaaroncovington.github.io/#contact" />
                     </div>
                 </form>
             </div>
