Contact Form Updates

--- a/index.html
+++ b/index.html
@@ -197,6 +197,7 @@
                     <div class="col-md-6 col-md-offset-3">
                         <input type="submit" class="btn btn-success btn-send btn-contact" value="Send message">
                         <input type="hidden" name="_next" value="http://theaaroncovington.github.io/#contact" />
+                        
                     </div>
                 </form>
             </div>
@@ -222,5 +223,6 @@
     <script src="js/PicSwap.js"></script>
     <script src="js/NavScroll.js"></script>
     <script src="js/hover.js"></script>
+    <script src="js/contact.js"></script>
 </body>
 </html>
