--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <img class="img-responsive center-block" id="logo" src="img/header.png">
                     <header>
                         <h2>Aaron Covington</h2>
-                        <p><h4>Fullstack Web Developer</h4></p>
+                        <p><h4>Front-end Web Developer</h4></p>
 
                     </header>
                 </div>
@@ -62,8 +62,7 @@
                     <img class="img-responsive center-block" id="aaron_img" src="img/aaron.jpg">
                     <p class="about-text">Hello. my name is Aaron and I am a senior at Roger's State University
                         focusing on Software Development.  I currently work full-time for Hewlett Packard Enterprises
-                        as a TPF Realtime Coverage Programmer.  In my spare time I enjoy developing web applications and
-                        solving algorithmic programming challenges. I have created this website to display samples of my work.</p>
+                        as a TPF Realtime Coverage Programmer supporting airline software.  In my spare time I enjoy solving programming challenges and learning new technologies and frameworks. I have created this website to display samples of my work.</p>
                 </div>
             </div>
         </div>
@@ -75,11 +74,11 @@
             <div class="row">
                 <div class="col-md-4 col-xs-12">
                     <div class="thumbnail portfolio-project">
-                        <a href="" class="img-hover"> 
+                        <a href="https://github.com/TheAaronCovington/TheAaronCovington.github.io" target="_blank" class="img-hover"> 
                             <div id="img1">
-                                <img class="img-responsive" src="img/place1.png">
+                                <img class="img-responsive" src="img/portfolio.png">
                             </div>
-                            <span class="text-content" id="span1"><span>I built this website to showcase my web development skills and to display my work.</span></span>
+                            <span class="text-content" id="span1"><span>I built this website to display my work and showcase my web development skills.  It is built using responsive design and makes use of HTML, CSS, and Javascript/Jquery.</span></span>
                         </a>
                         
                         <div class="caption proj-desc">
@@ -90,29 +89,29 @@
                 </div>
                 <div class="col-md-4 col-xs-12">
                     <div class="thumbnail portfolio-project">
-                        <a href="" class="img-hover">
+                        <a href="https://github.com/TheAaronCovington/Data-Structures-Algorithms/tree/master/Java/Stacks/MazeSolver" target="_blank" class="img-hover">
                             <div id="img2">
-                                <img class="img-responsive" src="img/place2.png">
+                                <img class="img-responsive" src="img/console.png">
                             </div>
-                            <span class="text-content" id="span2"><span>Place Name</span></span>
+                            <span class="text-content" id="span2"><span>This program reads in a maze, represented as a 2D Array, from a text file and solves it using a stack based algorithm.  The correct path is shown and printed out for the user.</span></span>
                         </a>
                         <div class="caption proj-desc">
-                            <h3 class="text-center">Sliding-Tile Game Solver</h3>
-                            <p class="text-center">Javascript</p>
+                            <h3 class="text-center">Maze Solver</h3>
+                            <p class="text-center">Java</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4 col-xs-12">
                     <div class="thumbnail portfolio-project">
-                        <a href="" class="img-hover">
+                        <a href="https://github.com/TheAaronCovington/Data-Structures-Algorithms/blob/master/Java/Trees/Tries/SpellChecker.java" target="_blank" class="img-hover">
                             <div id="img3">
-                                <img class="img-responsive" src="img/place3.png">
+                                <img class="img-responsive" src="img/console.png">
                             </div>
-                            <span class="text-content" id="span3"><span>Place Name</span></span>
+                            <span class="text-content" id="span3"><span>This program reads in a word using a trie data structure and determines if it  is spelled correctly.</span></span>
                         </a>
                         <div class="caption proj-desc">
-                            <h3 class="text-center">Placeholder Text</h3>
-                            <p class="text-center">HTML5 &bull; CSS3 &bull; Bootstrap</p>
+                            <h3 class="text-center">Spell Checker</h3>
+                            <p class="text-center">Java</p>
                         </div>
                     </div>
                 </div>
@@ -120,43 +119,43 @@
             <div class="row">
                 <div class="col-md-4 col-xs-12">
                     <div class="thumbnail portfolio-project">
-                        <a href="" class="img-hover">
+                        <a href="https://github.com/TheAaronCovington/Data-Structures-Algorithms/tree/master/Java/Trees/Huffman" target="_blank" class="img-hover">
                             <div id="img4">
-                                <img class="img-responsive" src="img/place1.png">
+                                <img class="img-responsive" src="img/console.png">
                             </div>
-                            <span class="text-content" id="span4"><span>Place Name</span></span>
+                            <span class="text-content" id="span4"><span>This program creates a Huffman Tree to encode and decode data.  The translation keys are stored in hashtables.</span></span>
                         </a>
                         <div class="caption proj-desc">
-                            <h3 class="text-center">Placeholder Text</h3>
-                            <p class="text-center">HTML5 &bull; CSS3 &bull; Bootstrap</p>
+                            <h3 class="text-center">Huffman Data Compression</h3>
+                            <p class="text-center">Java</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4 col-xs-12">
                     <div class="thumbnail portfolio-project">
-                        <a href="" class="img-hover">
+                        <a href="https://github.com/TheAaronCovington/Data-Structures-Algorithms/tree/master/Java" target="_blank" class="img-hover">
                             <div id="img5">
-                                <img class="img-responsive" src="img/place1.png">
+                                <img class="img-responsive" src="img/console.png">
                             </div>
-                            <span class="text-content" id="span5"><span>Place Name</span></span>
+                            <span class="text-content" id="span5"><span>This is a collection of data structures and algorithms that I have implemented in Java.</span></span>
                         </a>
                         <div class="caption proj-desc">
-                            <h3 class="text-center">Placeholder Text</h3>
-                            <p class="text-center">HTML5 &bull; CSS3 &bull; Bootstrap</p>
+                            <h3 class="text-center">Data Structures Collection</h3>
+                            <p class="text-center">Java</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4 col-xs-12">
                     <div class="thumbnail portfolio-project">
-                        <a href="" class="img-hover">
+                        <a href="https://github.com/TheAaronCovington/Challenges" target="_blank" class="img-hover">
                             <div id="img6">
-                                <img class="img-responsive" src="img/place1.png">
+                                <img class="img-responsive" src="img/console.png">
                             </div>
-                            <span class="text-content" id="span6"><span>Place Name</span></span>
+                            <span class="text-content" id="span6"><span>This is a collection of programming challenges and puzzles that I have solved from a variety of sites including Hackerrank, Hackerearth, Topcoder, Coderbytes, Leetcode, Interviewbit, FreeCodeCamp, and Eloquent Javascript</span></span>
                         </a>
                         <div class="caption proj-desc">
-                            <h3 class="text-center">Placeholder Text</h3>
-                            <p class="text-center">HTML5 &bull; CSS3 &bull; Bootstrap</p>
+                            <h3 class="text-center">Algorithmic Puzzles/Challenges</h3>
+                            <p class="text-center">Java &bull; C# &bull; Javascript</p>
                         </div>
                     </div>
                 </div>
