--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 
     <!-- Contact Section -->
     <section id="contact" class="contact-section">
-        <div class="container-fluid">
+        <div >
             <div class="row" id="contact-panel">
                 <h2 class="contact-title">Contact Me</h2>
                 <form action="https://formspree.io/TheAaronCovington@gmail.com" method="POST">
