--- a/index.html
+++ b/index.html
@@ -160,6 +160,22 @@
                     </div>
                 </div>
             </div>
+            <div class="row">
+                <div class="col-md-4 col-xs-12">
+                    <div class="thumbnail portfolio-project">
+                        <a href="https://github.com/TheAaronCovington/WeatherApp" target="_blank" class="img-hover">
+                            <div id="img7">
+                                <img class="img-responsive" src="img/weather.png">
+                            </div>
+                            <span class="text-content" id="span7"><span>This is an Android application that displays local weather data.</span></span>
+                        </a>
+                        <div class="caption proj-desc">
+                            <h3 class="text-center">Android Weather Application</h3>
+                            <p class="text-center">Java</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 
