--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <img class="img-responsive center-block" id="logo" src="img/header.png">
                     <header>
                         <h2>Aaron Covington</h2>
-                        <p><h4>Front-end Web Developer</h4></p>
+                        <p><h4>Full-stack Web Developer</h4></p>
 
                     </header>
                 </div>
